发布 v1.0.3 版本
文档改进：
- 所有代码注释统一为中文，提高代码可读性
- 完善了所有私有函数的注释文档
- main.go 中的注释全部翻译为中文
- 扩展了 README.md 文档（从 104 行扩展到 208 行）
- 添加了详细的版本历史记录

功能完善：
- 关于页面信息完全由后端管理（版本号、技术栈、开发者信息）
- 支持多个开发者信息展示
- 前端使用 onMounted 动态获取后端数据

代码质量：
- 所有函数都有完整的中文注释
- 代码结构更加清晰易懂
- 遵循 KISS、YAGNI、DRY、SOLID 原则

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>